--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "type": "git",
     "url": "https://github.com/zefoy/ngx-color-picker.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@angular/cdk": "6.4.7"
+  },
   "devDependencies": {
     "@angular/cli": "^6.1.0",
     "@angular/common": "^6.1.0",
